<resources>
    <!--    Landing Page -->
    <string name="choosemood">Choose Your Mood : </string>

    <!--    Calculator page -->
    <string name="app_name">BMI Calculator</string>
    <string name="form_berat_badan">Berat Badan Anda : (kg)</string>
    <string name="form_tinggi_badan">Tinggi Badan Anda : (cm)</string>
    <string name="form_button_hitung">Hitung BMI Anda</string>
    <string name="form_hasil">…</string>

    <!--    Login page -->
    <string name="welcome">Login Page</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="button_login">Login</string>
    <string name="tips_trick"><![CDATA[Tips & Trick]]></string>
    <string name="blank"> </string>
</resources>