<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculatorActivity">
    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:id="@+id/welcome_user"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="@string/welcome"
            android:theme="@style/TitleStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/form_berat_badan"/>

        <EditText
            android:id="@+id/edt_berat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:lines="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/form_tinggi_badan"/>

        <EditText
            android:id="@+id/edt_tinggi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:lines="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_hitung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:theme="@style/DescriptionStyle"
            android:background="@color/white"
            android:text="@string/form_button_hitung"/>

        <TextView
            android:id="@+id/tv_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/form_hasil"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BtnTips"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content"
            android:theme="@style/DescriptionStyle"
            android:background="@color/white"
            android:text="@string/tips_trick" />
    </LinearLayout>
</RelativeLayout>